--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="basis-1/6 font-semibold mr-3">Illustration</button>
         <button class="basis-1/6 font-semibold mr-3">Mobile</button>
         <button class="basis-1/6 font-semibold mr-3">Print</button>
-        <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="focus:ring-4 hover:bg-beige border-2 border-slate-100 rounded-full basis-1/5 p-0 ml-32 mr-20 inline-flex items-center dark:bg-beige-600 dark:hover:bg-beige dark:focus:ring-beige pl-12"type="button">Filters<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
+        <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="focus:ring-4 hover:bg-beige border-2 border-slate-100 rounded-full basis-1/5 p-0 ml-32 mr-20 inline-flex items-center dark:bg-beige-600 dark:hover:bg-beige dark:focus:ring-beige py-3 pl-12"type="button">Filters<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
           <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"/>
         </svg>
       </div>
